elements/pfe-navigation/src/pfe-navigation--lightdom.scss
/* ... */
[slot="mobile-search"] {
    input[type="text"] {
        padding: 5px 10px;
    }
}

.pfe-navigation {
    &-grid {
        @media (min-width: #{pfe-breakpoint(sm)}) {
            column-count: 2;
            column-gap: 32px;
            flex: 1;
        }

        @media (min-width: #{pfe-breakpoint(lg)}) {
            column-count: 3;
        }

        @media (min-width: #{pfe-breakpoint(xl)}) {
            /* autoprefixer grid: autoplace */
            display: grid;
            grid-gap: 32px;
            grid-template-columns: repeat(4, 1fr);
            -ms-grid-columns: 1fr 1fr 1fr 1fr;

            .pfe-navigation--column:nth-child(1) {
                -ms-grid-column: 1;
            }

            .pfe-navigation--column:nth-child(2) {
                -ms-grid-column: 2;
            }

            .pfe-navigation--column:nth-child(3) {
                -ms-grid-column: 3;
            }

            .pfe-navigation--column:nth-child(4) {
                -ms-grid-column: 4;
            }
        }
    }
    &--column-span-2 {
        // intentinally not setting for IE prefix to prevent column overlap
        @media (min-width: #{pfe-breakpoint(xl)}) {
            grid-column: span 2;
        }
    }
    &--footer:not(:empty) {
        margin:   calc(#{pfe-var(container-spacer, $fallback: 16px)} * 2) 0 0;
        border-top: 1px solid lightgray;
        padding:   calc(#{pfe-var(container-spacer, $fallback: 16px)} * 2.5) 0 calc(#{pfe-var(container-spacer, $fallback: 16px)} * 1.5);

        >*:not(:last-child) {
            margin-bottom: 32px;
        }

        >* {
            flex: 0 1 45%;
        }

        @media (min-width: #{pfe-breakpoint(sm)}) {
            display: flex;
            flex-wrap: wrap;
            align-items: center;
            justify-content: space-between;

            >*:not(:last-child) {
                margin-bottom: 0;
            }

            >*:nth-child(3) {
                margin-top: 32px;
            }
        }

        @media (min-width: #{pfe-breakpoint(md)}) {
            justify-content: flex-start;
        }

        @media (min-width: #{pfe-breakpoint(lg)}) {
            // Not setting grid prefix here since IE doesn't support auto-flow
            display: grid;
            grid-gap: 32px;
            grid-auto-flow: column;
            -ms-grid-columns: 1fr 1fr 1fr;
            -ms-grid-rows: 1fr 1fr;

            >*:nth-child(3) {
                margin-top: 0;
            }
            .pfe-navigation--column:nth-child(1) {
                -ms-grid-column: 1;
            }

            .pfe-navigation--column:nth-child(2) {
                -ms-grid-column: 2;
            }

            .pfe-navigation--column:nth-child(3) {
                -ms-grid-column: 3;
            }

            .pfe-navigation--column:nth-child(4) {
                -ms-grid-column: 1;
                -ms-grid-row: 2;
            }
        }

        @media (min-width: #{pfe-breakpoint(xl)}) {
            padding-bottom: 0;
            display: -ms-grid;
            grid-template-columns: repeat(4, 1fr);
            -ms-grid-columns: 1fr 1fr 1fr 1fr;
            align-items: center;
        }
    }
    &--column {
        @media (min-width: #{pfe-breakpoint(md)}) {
            @include browser-query(ie11) {
                display: flex;
                align-items: center;
            }
        }
    }
}

// This class is added manually inside the tray on the light DOM content
.pfe-navigation-item__tray--container {
    width: 100%;

    // stop using padding, start using max width at medium breakpoint
    @media screen and (min-width: pfe-breakpoint(md)) {
      padding: 0;
      max-width: #{pfe-local(Width, $fallback: 1140px)};
    }
    // Loop through the other breakpoints

    pfe-navigation-item:not([pfe-full-width]) & {
      @each $size in ("md", "lg", "xl") {
        @media screen and (min-width: pfe-breakpoint( #{$size} ) ) {
          --pfe-navigation--Width: calc(#{pfe-breakpoint( #{$size} )} - #{pfe-local(MaxWidth)});
        }
      }
    }
    @include browser-query(ie11) {
        padding-top: 1.5em;
        padding-bottom: 1.5em
    }
    input[type="text"] {
        padding: 5px 10px;
    }
}

pfe-navigation-item .pfe-link-list {
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
    display: block;
    box-sizing: border-box;
    width: 100%;
    margin-bottom: 1em;

    &--header {
        font-family: #{pfe-var(font-family)};
        margin: 0 0 .75em 0;
        font-size: 16px;
        font-weight: 400;
        line-height: 1.75;
        color: #{pfe-color(ui-complement)};

        @media (min-width: #{pfe-breakpoint(xl)}) {
            font-size: 16px;
        }

        a {
            color: #{pfe-color(ui-complement)};
            text-decoration: underline;

            &:hover {
                color: #{pfe-color(ui-complement)};
                text-decoration: none;
            }

            &:focus {
                outline-offset: 1px;
                outline-style: dotted;
                outline-width: 1px;
                outline-color: #{pfe-apply-broadcast(link--focus)};
            }
        }
    }

    &--group {
        list-style: none;
        padding: 0;

        &-item {
            line-height: 1.3;
            margin-bottom: .75em;
        }

        &-item > a {
            @extend %link-styles;
            font-size: 16px;
        }
    }
}

// Set collapsed trigger links to always appear white.
pfe-navigation-item.expanded pfe-navigation-item[parent_hidden]:not(.expanded) [slot="trigger"] > a,
pfe-navigation-item.expanded pfe-navigation-item[parent_hidden]:not(.expanded) [slot="trigger"] > a.active {
    color: #fff !important;
}

// Override trigger font-size on older browsers.
[slot="trigger"],
[slot="trigger"] > a {
    font-size: 12px;
}
/* ... */

